frontend/frontend-chart/templates/presentation-ingress-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: presentation
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-api
    - podSelector:
        matchLabels:
          app: db-tier
  egress:
  - to:
    - podSelector:
        matchLabels:
            app: app-api
    - podSelector:
        matchLabels:
            app: db-tier
